styles/message.css
/* Message section */
.message__wrapper {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 200px auto;
}

.message__header {
    margin: 60px 0 0 127px;
}

.message__hero {
    grid-row: span 2;
}

.message__content {
    margin: 30px 0 0 127px;
}

.message__heading {
    font-size: 3.875rem;
    font-weight: 300;
    text-transform: uppercase;
    letter-spacing: 1.1rem;
    color: var(--clr-red);
}

.message__span {
    font-weight: 400;
    color: var(--clr-red-dark);
    line-height: 1.1;
}

.message__anim--1 {
    animation: headingSlide 1000ms forwards;
    display: inline-block;
}

.message__anim--2 {
    animation: headingSlide 1000ms forwards;
    animation-delay: 250ms;
    display: inline-block;
    opacity: 0;
}

.message__anim--3 {
    animation: headingSlide 1000ms forwards;
    animation-delay: 500ms;
    display: inline-block;
    opacity: 0;
}

[data-anim] {
    animation: opacity 2000ms forwards;
    animation-delay: 500ms;
    opacity: 0;
}

.message__text {
    font-size: 0.98rem;
    color: var(--clr-red);
    max-width: 440px;
    line-height: 1.8;
    letter-spacing: 0.01rem;
    margin: 23px 0 42px 0;
}

.message__form {
    position: relative;
    max-width: 440px;
    width: 100%;
}

.invalid.message__form::before {
    position: absolute;
    content: url('../assets/img/icon-error.svg');
    top: 50%;
    transform: translateY(-50%);
    right: 30%;
    animation: invalid 750ms;
}

.invalid.message__form > .message__input {
    border: 1px solid var(--clr-red-soft);
}

.invalid.message__form + .message__invalid {
    display: block;
}

.message__input {
    background: transparent;
    width: 100%;
    height: 56px;
    border: 1px solid var(--clr-red-grayish);
    border-radius: 40px;
    padding-left: 33px;
}

.message__input:invalid {
    box-shadow: none;
}

.message__input::placeholder {
    font-family: 'Josefin Sans', sans-serif;
    color: var(--clr-red);
    font-size: 1rem;
}

.message__button {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    top: 0;
    right: 0;
    height: 100%;
    width: 100px;
    border-radius: 40px;
    border: none;
    cursor: pointer;
    background: linear-gradient(var(--gr-red-dark));
    box-shadow: 2px 5px 16px 0 var(--clr-red);
    transition: width 250ms ease-in,
                opacity 250ms ease-in;
}

.message__button:hover {
    width: 120px;
    opacity: 0.8;
}

.message__button::before {
    position: absolute;
    content: url('../assets/img/icon-arrow.svg');
}

.message__invalid {
    display: none;
    text-align: left;
    margin: 10px 0 0 20px;
    color: var(--clr-red-soft);
}

/* Message media queries */
@media (max-width: 1200px) {
    .message__hero {
        align-self: center;
        padding: 0 20px;
    }

    .message__hero img {
        width: 40vw;
    }
}

@media (max-width: 900px) {
    .message__wrapper {
        grid-template-columns: 1fr;
        grid-template-rows: auto;
        justify-items: center;
    }

    .message__header {
        margin: 0 0 30px 30px;
        justify-self: flex-start;
        transform: scale(0.7);
    }

    .message__hero {
        padding: 0;
    }

    .message__hero img {
        display: block;
        width: 100%;
        margin: 0 0 66px 0;
    }

    .message__content {
        margin: 0;
        text-align: center;
    }
    
    .message__heading {
        font-size: 3rem;
    }

    .message__text {
        font-size: 0.95rem;
    }

}

@media (max-width: 480px) {
    .message__wrapper {
        margin: 0;
    }

    .message__header {
        margin: 0 0 30px 0;
    }

    .message__content {
        margin: 0 30px;
    }

    .message__heading {
        font-size: 2.5rem;
        letter-spacing: 0.9rem
    }

    .message__text {
        font-size: 0.875rem;
    }

    .message__button {
        width: 70px;
    }

    .message__button:hover {
        width: 80px;
        opacity: 0.8;
    }
}

